--- a/FoodTracker/Base.lproj/Main.storyboard
+++ b/FoodTracker/Base.lproj/Main.storyboard
@@ -5,7 +5,6 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
-        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -54,7 +53,7 @@
                                     <outlet property="nameLabel" destination="G6A-46-lNM" id="Sc5-ck-wtD"/>
                                     <outlet property="photoImageView" destination="XcD-7x-f6c" id="5Om-Ui-ebw"/>
                                     <outlet property="ratingControl" destination="ycG-o5-Dm1" id="ZKm-sV-O69"/>
-                                    <segue destination="Rh1-w3-UO5" kind="show" id="JUs-AM-lgk"/>
+                                    <segue destination="BYZ-38-t0r" kind="show" identifier="ShowDetail" id="fgY-9t-LBh"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -120,7 +119,11 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="New Meal" id="14q-QR-KZK">
-                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="PUH-fQ-Urd"/>
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="PUH-fQ-Urd">
+                            <connections>
+                                <action selector="cancel:" destination="BYZ-38-t0r" id="l5w-oT-cq5"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="GY6-Ta-qBq">
                             <connections>
                                 <segue destination="pwx-hF-oLG" kind="unwind" unwindAction="unwindToMealListWithSender:" id="ys3-Nb-4Is"/>
@@ -142,7 +145,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1244" y="133"/>
+            <point key="canvasLocation" x="1508" y="134"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Q90-Pn-eRK">
@@ -178,43 +181,13 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hTv-mn-wpi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="478.39999999999998" y="133.13343328335833"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="lOt-Ch-PgP">
-            <objects>
-                <viewController id="Rh1-w3-UO5" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="cfq-D4-4vS">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="F8z-iI-inH">
-                                <rect key="frame" x="16" y="84" width="343" height="20.5"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dxz-DV-5BC">
-                                        <rect key="frame" x="0.0" y="0.0" width="343" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </stackView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="d5u-Fh-knw" firstAttribute="trailing" secondItem="F8z-iI-inH" secondAttribute="trailingMargin" constant="16" id="Hko-JK-JTF"/>
-                            <constraint firstItem="F8z-iI-inH" firstAttribute="leading" secondItem="cfq-D4-4vS" secondAttribute="leadingMargin" id="j1H-Qs-vX4"/>
-                            <constraint firstItem="F8z-iI-inH" firstAttribute="top" secondItem="d5u-Fh-knw" secondAttribute="top" constant="20" id="obN-6U-vlO"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="d5u-Fh-knw"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="8V3-zi-VWp" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-150" y="913"/>
+            <point key="canvasLocation" x="628" y="539"/>
         </scene>
     </scenes>
     <resources>
         <image name="defaultPhoto" width="540" height="540"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="fgY-9t-LBh"/>
+    </inferredMetricsTieBreakers>
 </document>
