--- a/FoodTracker/Base.lproj/Main.storyboard
+++ b/FoodTracker/Base.lproj/Main.storyboard
@@ -65,7 +65,7 @@
                     <navigationItem key="navigationItem" title="Your Meals" id="qbi-Vf-Pd0">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="w1v-6u-dsY">
                             <connections>
-                                <segue destination="BWU-C0-fvt" kind="presentation" identifier="AddItem" id="0y3-Sa-s6q"/>
+                                <segue destination="BWU-C0-fvt" kind="presentation" identifier="AddItem" id="PsC-y2-O19"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
